# L2Auth

./: .clang-format  .gitignore  CMakeLists.txt  README.md
L2Auth/: CMakeLists.txt
L2Auth/etc/: config.txt
L2Auth/reversed/: L2AuthD.asm  L2AuthD.c  defs.h
L2Auth/src/: CIOObject.cpp  main.cpp
L2Auth/src/config/: CIPList.cpp  CIPList.h  Config.cpp  Config.h
L2Auth/src/crypt/: Blowfish.h  DesBackEnd.cpp  DesBackEnd.h  DesFrontEnd.h  DesFrontEnd_foreign.cpp  DesNewCrypt.h  OldCrypt.cpp  OldCrypt.h  PwdCrypt.cpp
L2Auth/src/db/: CAccount.cpp  CAccount.h  CDBConn.cpp  CDBConn.h  CServerUserCountStatus.h  DBEnv.cpp  DBEnv.h
L2Auth/src/logger/: CFileLog.cpp  CFileLog.h  CLogdFilelog.cpp  CLogdFilelog.h  LogType.cpp  LogType.h
L2Auth/src/model/: AccountDB.cpp  AccountDB.h  CIPAccessLimit.cpp  CIPAccessLimit.h  CServerKickList.cpp  CServerList.cpp  CServerList.h  LoginFailReason.h  LoginState.cpp  LoginState.h  LoginUser.cpp  LoginUser.h  PlayFail.cpp  ServerKind.cpp  ServerKind.h  ServerPacketList.cpp  ServerPacketList.h  ServersProvider.cpp  ServersProvider.h  SexAndCentury.h  WorldServer.h
L2Auth/src/network/: BufferReader.cpp  BufferReader.h  CAuthOverlapped.cpp  CAuthOverlappedPool.h  CAuthOverlappedSlot.cpp  CAuthOverlappedSlot.h  CAuthPacket.cpp  CAuthPacket.h  CAuthPacketPool.h  CAuthPacketSlot.cpp  CAuthPacketSlot.h  CAuthServer.cpp  CAuthServer.h  CAuthSocket.cpp  CAuthSocket.h  CIOBuffer.cpp  CIOBuffer.h  CIOBufferPool.cpp  CIOBufferPool.h  CIOBufferSlot.cpp  CIOServer.cpp  CIOServer.h  CIOServerInt.cpp  CIOServerInt.h  CIOSocket.cpp  CIOSocket.h  CLogPacket.cpp  CLogPacket.h  CLogPacketPool.cpp  CLogPacketSlot.cpp  CLogSocket.cpp  CLogSocket.h  CSocketInt.cpp  CWantedPacket.cpp  CWantedPacket.h  CWantedPacketPool.cpp  CWantedPacketPool.h  CWantedPacketSlot.cpp  CWantedPacketSlot.h  CWantedSocket.cpp  (+18 more)
L2Auth/src/network/packets/: LoginPackets.h
L2Auth/src/threads/: CIOTimer.h  CJob.cpp  CJob.h  CLock.h  CRWLock.cpp  CRWLock.h  Threading.cpp  Threading.h
L2Auth/src/ui/: CLog.cpp  CLog.h  CReporter.h  MainWindow.cpp  resources.rc
L2Auth/src/utils/: CExceptionInit.cpp  CExceptionInit.h  CoreDump.cpp  CoreDump.h  SendMail.cpp  Utils.cpp  Utils.h  cstdint_support.h
etc/: BlockIPs.txt  serverlist
reversed/: L2AuthD.h
src/: AppInstance.h  CIOObject.h  main.cpp
src/crypt/: Blowfish.cpp  DesNewCrypt.cpp  OldCrypt.h  PwdCrypt.cpp  PwdCrypt.h
src/db/: CDBConn.cpp  CDBConn.h  CServerUserCountStatus.cpp  CServerUserCountStatus.h  DBEnv.cpp  SqlConnection.h
src/logger/: CFileLog.cpp  CLogdFilelog.cpp  LogSeverity.cpp  LogSeverity.h
src/model/: CServerKickList.cpp  CServerKickList.h  CServerList.cpp  FrameType.h  LoginFailReason.cpp  PlayFail.h  ServerKind.cpp  ServerPacketList.h  ServersProvider.h  SexAndCentury.cpp  WorldServer.cpp
src/network/: CAuthOverlapped.h  CAuthOverlappedPool.cpp  CAuthOverlappedSlot.cpp  CAuthPacketPool.cpp  CIOBuffer.cpp  CIOBuffer.h  CIOBufferSlot.h  CIOServerInt.cpp  CIOServerInt.h  CLogPacketPool.h  CLogPacketSlot.h  CLogSocket.cpp  CSocketInt.h  CWantedPacket.h  CWantedSocket.cpp  CWantedSocket.h  IPPacket.cpp  IPPacket.h  IPPacketPool.cpp  IPPacketPool.h  IPSocket.cpp  IPSocket.h  PacketUtils.cpp  PacketUtils.h  SocketStatus.cpp  SocketStatus.h  WorldSrvPacket.cpp  WorldSrvPacketPool.cpp  WorldSrvPacketSlot.h  WorldSrvServer.cpp
src/network/packets/: LoginPackets.cpp
src/threads/: CIOTimer.cpp  CIOTopTimer.cpp  CIOTopTimer.h  CJob.cpp  CLock.cpp
src/ui/: CReporter.cpp  MainWindow.h  resources.h
src/utils/: SendMail.h
